# SZU-LYTCDGSCS

./: readme
config/: yolov5.json
down_ws/: readme.md
down_ws/src/image_resize_node/: CMakeLists.txt  package.xml
down_ws/src/image_resize_node/launch/: image_resize.launch.py
down_ws/src/image_resize_node/src/: image_resize_node.cpp
down_ws/src/origincar_base/config/: ekf.yaml
down_ws/src/origincar_base/launch/: origincar_bringup.launch.py
down_ws/src/origincar_bringup/launch/: usb_websocket_display.launch.py
down_ws/src/qrcode_detection_two/: package.xml  setup.cfg  setup.py
down_ws/src/qrcode_detection_two/qrcode_detection_two/: erweima.py  erweima_opencv.py
down_ws/src/qwen_vl_client/: package.xml  setup.cfg  setup.py
down_ws/src/qwen_vl_client/qwen_vl_client/: qwen_vl_client.py
down_ws/src/qwen_vl_msgs/: CMakeLists.txt  package.xml
down_ws/src/race_states_holder/: package.xml  setup.cfg  setup.py
down_ws/src/race_states_holder/launch/: race_holder.launch.py
down_ws/src/race_states_holder/race_states_holder/: motion_control_pid.py  pid.py  states_holder.py  utils.py
down_ws/src/rdkx5_yolov5/: CMakeLists.txt  package.xml
down_ws/src/rdkx5_yolov5/include/rdkx5_yolov5/: yolov5_detector.hpp
down_ws/src/rdkx5_yolov5/launch/: yolov5.launch.py
down_ws/src/rdkx5_yolov5/src/: web_server.cpp  yolov5_detector.cpp  yolov5_node.cpp
up/qwen_ws/src/qwen_vl_msgs/srv/: QwenVL.srv
up/qwen_ws/src/qwen_vl_server/: package.xml  setup.cfg  setup.py
up/qwen_ws/src/qwen_vl_server/qwen_vl_server/: qwen_vl_server.py
up/visualization/: readme.md
up/visualization/visualization_withKF/: KF.py  Tracker.py  ros_filter.py  test.py
up/visualization/visualization_withoutKF/: visualization_without_KF.py
